# name_extractor

./: .gitignore  .pre-commit-config.yaml  DEBUGGING-TESTS  LINTING  MyINSTALL  README.md  names.json  pyproject.toml  run_linter.sh  sample.txt  sample2.txt
name_extractor/: __init__.py  cli.py  cli2.py  cli3.py
name_extractor/json/: converter.py
name_extractor/text/: converter.py
tests/: dummy_test.py  test_cli.py  test_cli2.py
