[tool.poetry]
name = "name-extractor"
version = "0.1.0"
description = ""
authors = ["Leon <leon.graf5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
click = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
name-extractor = "name_extractor.cli3:main"
